# opengl-template

./: CMakeLists.txt  readme.md
src/: main.c
